--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <nav class="bg-white shadow">
     <div class="container mx-auto px-4 py-4 flex justify-between items-center">
       <a href="#" class="text-2xl font-bold text-blue-600">AI ImageGen</a>
-      <a href="/img-generator.html" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-lg transition">Try Generator</a>
+      <a href="/Tools/img-generator.html" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-lg transition">Try Generator</a>
     </div>
   </nav>
 
